Add reponsive and dynamic hamburguer menu

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             </ul>
         </nav>
         <label for="checkbox"> <!-- Checkbox hack -->
-            <i class="fas fa-bars menu-icon"></i>
+            <div class="bars" onclick="this.classList.toggle('cross')">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
         </label>
     </div> 
     <!-------------------- END TOP NAVBAR -------------------->
