--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./style/style.css">
     <script src="https://kit.fontawesome.com/64517a6b26.js" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/8f74d3ebcb.js"></script>
 
 </head>
 <body>
