Fix hero paragraph for mobile/desktop. Add iframes. Fix blue dot. Enlarge topics width.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="./style/style.css">
     <script src="https://kit.fontawesome.com/64517a6b26.js" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/8f74d3ebcb.js"></script>
 
 </head>
 <body>
@@ -37,8 +36,9 @@
         </div>
         
         <div class="main-title-container">
-            <h1>Hello <span>world</span> pale blue dot.</h1>
-            <p>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
+            <h1>Hello <span class="world-crossed">world</span> pale blue dot<span class="dot-blue">.</span></h1>
+            <p class="paragraph-mobile">Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</p>
+            <p class="paragraph-desktop">El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.</p>
             <button type="button">CONOCÉ MÁS</button>
         </div>
 
@@ -53,16 +53,12 @@
                 <h2>Episodios</h2>
                 <div class="embed-container">
                     <div class="embed-column">
-                        <img class="embed-mobile" src="./res/embed1_.png" alt="JS Party Podcast"> <!-- Placeholders for the iframes -->
-                        <img class="embed-full" src="./res/embed1.png" alt="JS Party Podcast">
-                        <img class="embed-mobile" src="./res/embed4_.png" alt="REWORK Podcast">
-                        <img class="embed-full" src="./res/embed3.png" alt="REWORK Podcast">
+                        <iframe src="https://open.spotify.com/embed/episode/2qiO9sr71rl0yidaGlZXCk?si=uUB3NRlRSCq2rZL6CyjOrQ" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed/episode/4eVO3LXYSbKU6pukjnl9b0?si=2Y-ILX4nTqOVzWJ8dxwGow" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div class="embed-column">
-                        <img class="embed-mobile" src="./res/embed2_.png" alt="Syntax Podcast">
-                        <img class="embed-full" src="./res/embed2.png" alt="Syntax Podcast">
-                        <img class="embed-mobile" src="./res/embed4_.png" alt="Ruby On Rails Podcast">
-                        <img class="embed-full" src="./res/embed4.png" alt="Ruby On Rails Podcast">
+                        <iframe src="https://open.spotify.com/embed/episode/7IjazvvtUNfwtDzEdrQjKR?si=AlmWszeDRiGrQV8fVgPuWw" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed/episode/57an45GopwoNIKdn9k9nTk?si=AejH1UomRNeqIF1al9G26g" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
             </div>
