Correct iframe validation error because of the attributes

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <h2>Episodios</h2>
                 <div class="embed-container">
                     <div class="embed-column">
-                        <iframe src="https://open.spotify.com/embed/episode/2qiO9sr71rl0yidaGlZXCk?si=uUB3NRlRSCq2rZL6CyjOrQ" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                        <iframe src="https://open.spotify.com/embed/episode/4eVO3LXYSbKU6pukjnl9b0?si=2Y-ILX4nTqOVzWJ8dxwGow" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed/episode/2qiO9sr71rl0yidaGlZXCk?si=uUB3NRlRSCq2rZL6CyjOrQ"></iframe>
+                        <iframe src="https://open.spotify.com/embed/episode/4eVO3LXYSbKU6pukjnl9b0?si=2Y-ILX4nTqOVzWJ8dxwGow"></iframe>
                     </div>
                     <div class="embed-column">
-                        <iframe src="https://open.spotify.com/embed/episode/7IjazvvtUNfwtDzEdrQjKR?si=AlmWszeDRiGrQV8fVgPuWw" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                        <iframe src="https://open.spotify.com/embed/episode/57an45GopwoNIKdn9k9nTk?si=AejH1UomRNeqIF1al9G26g" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://open.spotify.com/embed/episode/7IjazvvtUNfwtDzEdrQjKR?si=AlmWszeDRiGrQV8fVgPuWw"></iframe>
+                        <iframe src="https://open.spotify.com/embed/episode/57an45GopwoNIKdn9k9nTk?si=AejH1UomRNeqIF1al9G26g"></iframe>
                     </div>
                 </div>
             </div>
